panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__struct__test_nested_struct_with_braced_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/struct/test_nested_struct_with_braced_string_literal.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: excess element in struct initialiser
    ╭─[panko/tests/cases/execute/initialisation/struct/test_nested_struct_with_braced_string_literal.c:15:20]
    │
 15 │     struct T t = {{"hello world"}, 42};
    │              ┬     ──────┬──────  
    │              │           ╰──────── trying to initialise element at index 1 for `struct String~1 complete`
    │              │                    
    │              ╰──────────────────── while initialising this variable
────╯
